Add a Function that represents a normalized weighted sum of a list of Functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,6 +11,8 @@ WeGetSignal_SOURCES = \
     resources.c \
     sine.h \
     sine.c \
+    weighted_sum.h \
+    weighted_sum.c \
     wgs.c \
     wgs_app.c \
     wgs_app.h \
