Order files more consistently in Makefile.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,18 +6,18 @@ WeGetSignal_LDADD = @GTK_LIBS@
 WeGetSignal_SOURCES = \
     function.h \
     function.c \
-    function_display.c \
     function_display.h \
+    function_display.c \
     resources.c \
     sine.h \
     sine.c \
     weighted_sum.h \
     weighted_sum.c \
     wgs.c \
-    wgs_app.c \
     wgs_app.h \
-    wgs_app_window.c \
-    wgs_app_window.h
+    wgs_app.c \
+    wgs_app_window.h \
+    wgs_app_window.c
 
 BUILT_SOURCES = resources.c
 CLEANFILES = $(BUILT_SOURCES)
